# scRR-fx

./: .gitignore  LICENSE  Paper.md  README.md  SCRR_Known_Issues.md  pyproject.toml
src/scrr_fx/: __init__.py  _core.py  _ops.py  _renorm.py  _tensor.py
tests/: __init__.py  helpers.py  test_backward.py  test_core.py  test_core_edge.py  test_debug_internal.py  test_dispatch.py  test_integration.py  test_ops.py  test_precision_benchmark_not_pytest.py  test_precision_debug.py  test_renorm.py  test_renorm_param.py  test_tensor.py
